# OpenNNA2.0

./: README.md
platform/OpenNNA_STM32H7A3/.metadata/: .log4j.xml  version.ini
platform/OpenNNA_STM32H7A3/OpenNNA_STM32H7A3_Demo_Dense-Mnist/: .cproject  .project  OpenNNA_STM32H7A3_Demo_Mnist Debug.launch
platform/OpenNNA_STM32H7A3/OpenNNA_STM32H7A3_Demo_Example/: .cproject  .mxproject  OpenNNA_STM32H7A3_Demo_Example.ioc  OpenNNA_STM32H7A3_Demo_Example.launch
platform/OpenNNA_STM32H7A3/OpenNNA_STM32H7A3_Demo_Mnist/: OpenNNA_STM32H7A3_Demo_Mnist.ioc  STM32H7A3ZITXQ_FLASH.ld
platform/pc/: opennna_demo_example.c
platform/pc/conv(LeNet5)-mnist/: image_0_1.txt  (+6 more)
platform/zero_linux_board/: CMakeLists.txt  opennna_core.h  opennna_demo_mobilenet_0.25_128_int8.c  opennna_operator_avgpool.c  opennna_operator_avgpool.h  opennna_operator_conv2d.c  opennna_operator_dense.c  opennna_operator_dwconv2d.c  opennna_operator_dwconv2d.h  opennna_operator_example.c  opennna_operator_leakyrelu.c  opennna_operator_maxpool.c  opennna_operator_padding.c  opennna_operator_relu.c  opennna_operator_relu6.c  opennna_operator_tanh.c
platform/zero_linux_board/weights_bias_h/: L0_Conv2d_Weights.h  L10_Conv2d_Bias.h  L10_Conv2d_Weights.h  L11_DwConv2d_Weights.h  L12_Conv2d_Bias.h  L13_DwConv2d_Bias.h  L13_DwConv2d_Weights.h  L15_DwConv2d_Weights.h  L16_Conv2d_Bias.h  L17_DwConv2d_Bias.h  L19_DwConv2d_Bias.h  L19_DwConv2d_Weights.h  L1_DwConv2d_Bias.h  L20_Conv2d_Bias.h  L20_Conv2d_Weights.h  L21_DwConv2d_Bias.h  L21_DwConv2d_Weights.h  L22_Conv2d_Bias.h  L22_Conv2d_Weights.h  L24_Conv2d_Bias.h  L28_Conv2d_Bias.h  L2_Conv2d_Weights.h  L3_DwConv2d_Weights.h  L4_Conv2d_Bias.h  L5_DwConv2d_Bias.h  L5_DwConv2d_Weights.h  L7_DwConv2d_Weights.h  L8_Conv2d_Bias.h  L9_DwConv2d_Bias.h  L9_DwConv2d_Weights.h
src/: opennna_core.c  opennna_core.h
src/core/: opennna_core.c  opennna_core.h
src/operator/: opennna_operator_avgpool.c  opennna_operator_conv2d.c  opennna_operator_dense.c  opennna_operator_dense.h  opennna_operator_dwconv2d.c  opennna_operator_example.c  opennna_operator_example.h  opennna_operator_padding.c  opennna_operator_padding.h  opennna_operator_relu.c  opennna_operator_softmax.c
tools/: OpenNNA_Converter.py  OpenNNA_Model_Converter.ipynb  load_model.py  make_image_tfrecord.py  read_tfrecord_train.py  save_img2txt.py  save_weights2txt.py
(+597 files in other folders)
